--- a/ES6/class-1/package.json
+++ b/ES6/class-1/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel app.js -o bundle.js"
+    "build": "babel src -d lib",
+    "script-name":"babel-node ./src/app.js"
   },
   "author": "",
   "license": "ISC",
