--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "codesnap.containerPadding": "1rem"
+  "codesnap.containerPadding": "1rem",
+  "vue-helper.componentIgnore": [
+    ".js"
+  ]
 }
